--- a/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
+++ b/src/Sesile/CircuitBundle/Resources/views/Circuit/new.html.twig
@@ -61,6 +61,20 @@
             content: 'Ajouter une étape',
             placement: 'bottom'
         });*/
+
+
+        // Fonction permettant de determinier si le scroll est présent sur un élément
+        // Returns { vertical: true/false, horizontal: true/false }
+        $.fn.hasScrollBar = function() {
+            var e = this.get(0);
+            return {
+                vertical: e.scrollHeight > e.clientHeight,
+                horizontal: e.scrollWidth > e.clientWidth
+            };
+
+        };
+
+
         scrollFrisque();
 
 
@@ -131,7 +145,7 @@
                     return '<span data-toggle="popover" style="display: block" data-id="'+tabType[1]+'"><i class="fa fa-group"></i>&nbsp;&nbsp;'+ state.text+'</span>';
                 }
 
-            };
+            }
 
 
             $("select.selusers").select2({
