--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -14,11 +14,7 @@
     <div class="row">
         <div class="col-md-12">
             <h3>
-                {% if ( classeur.nom | length ) > 75 %}
-                    {{ classeur.nom[:75] }}...
-                {% else %}
-                    {{ classeur.nom }}
-                {% endif %}
+                {{ classeur.shortNom }}
             </h3>
         </div>
     </div>
