Mantis 0002887: Signature PDF : Le visa et la signature sur les PDF en paysage ne sont pas optimisé

--- a/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/visubord.html.twig
@@ -156,7 +156,9 @@
 
         $('.pj').click(function () {
             var idDoc = '{{ idDoc }}';
-            if ( msieversion()) {
+
+            // Si l utilisateur est sur IE ou si cest un fichier zip alors on propose le téléchargement du document
+            if ( msieversion() || $('.pj').text().split('.').pop() == "zip") {
                 window.open(Routing.generate('getpjie', {
                     'id': idDoc,
                     'bord': $('#bordx').val(),
