--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/boutonRefus.html.twig
@@ -17,13 +17,13 @@
                     </button>
                     <ul class="dropdown-menu">
                         {% for role in uservalidant.UserRole %}
-                            <li><a href="#" class="btn-valider-signer" data-action="{{ path('signform',{'id':classeur.id, 'role':role.id,}) }}">{{ role.userRoles }}</a></li>
+                            <li><a href="#" class="btn-valider-signer" data-action="{{ path('signdocjws',{'id':classeur.id, 'role':role.id,}) }}">{{ role.userRoles }}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
             {# Signer le classeur sans multi roles #}
             {% else %}
-                <button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signform',{'id':classeur.id}) }}">
+                <button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signdocjws',{'id':classeur.id}) }}">
                     <span class="glyphicon glyphicon-ok"></span>
                     &nbsp;Valider et Signer
                 </button>
@@ -65,26 +65,11 @@
             </button>
 
             {% if signablePDF %}
-            <button type="submit" class="btn btn-success btn-valider-signer-pdf" data-action="{{ path('signPdfDocAction',{'id':classeur.id}) }}">
+            <button type="submit" class="btn btn-success btn-valider-signer-pdf" data-action="{{ path('signdocjws',{'id':classeur.id}) }}">
                 <span class="glyphicon glyphicon-ok"></span>
-                &nbsp;Valider et Signer PDF
+                &nbsp;Valider et Signer le document
             </button>
             {% endif %}
-
-            {#<button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signform',{'id':classeur.id}) }}">
-                <span class="glyphicon glyphicon-ok"></span>
-                &nbsp;Valider et Signer
-            </button>#}
-            {#<button type="submit" class="btn btn-success btn-valider-signer" data-action="{{ path('signform',{'id':classeur.id}) }}">
-                <span class="glyphicon glyphicon-ok"></span>
-                &nbsp;Valider et Signer
-            </button>#}
-
-            {#<button type="submit" class="btn btn-success btn-valider-non-signer" data-action="{{ path("classeur_valider") }}">
-                <span class="glyphicon glyphicon-ok"></span>
-                &nbsp;Valider
-            </button>#}
-
 
             <button type="submit" class="btn btn-danger" data-toggle="modal" data-target="#fenetreModal" data-whatever="@mdo">
                 <span class="glyphicon glyphicon-remove"></span>
