--- a/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
@@ -54,19 +54,34 @@
 
                 {% if doc.type != 'application/pdf' %}
                 {#{% if doc.type != 'application/pdf' and signature %}#}
-                    <a id='download' href="{{ path('download_doc', {'id':doc.id}) }}" class="btn btn-default" role="button">
-                        <span class="glyphicon glyphicon-download-alt"></span>
-                        Télécharger {#Original#}
-                    </a>&nbsp;
 
-                {% else %}
-                        {#<a id='download' href="{{ path('download_doc_visa', {'id':doc.id}) }}" class="btn btn-default" role="button" target="_blank">
-                            <span class="glyphicon glyphicon-download-alt"></span>Télécharger visa
+                    {# Si le document contient des fichiers de signature #}
+                    {% if (doc.detachedsign | length ) > 0 %}
+                        <div class="row row-padding">
+                            <div class="col-md-6 col-md-push-3">
+                                <div class="dropdown">
+                                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                        Télécharger le fichier <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu dropdown-detached-file" aria-labelledby="dropdownMenu1">
+                                        <li><a href="{{ path('download_doc_zip', {'id':doc.id}) }}">Télécharger le fichier complet</a></li>
+                                        <li><a href="{{ path('download_doc', {'id':doc.id}) }}">Télécharger l'original</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    {% else %}
+                        <a id='download' href="{{ path('download_doc', {'id':doc.id}) }}" class="btn btn-default" role="button">
+                            <span class="glyphicon glyphicon-download-alt"></span>
+                            Télécharger
                         </a>&nbsp;
+                    {% endif %}
 
-                        <a id='download' href="{{ path('download_doc_sign', {'id':doc.id}) }}" class="btn btn-default" role="button" target="_blank">
-                            <span class="glyphicon glyphicon-download-alt"></span>Télécharger signa
-                        </a>#}
+
+                {# Si le document est un fichier PDF #}
+                {% else %}
+
                     <div class="row row-padding">
                         <div class="col-md-6 col-md-push-3">
                             <div class="dropdown">
@@ -123,8 +138,6 @@
 
                 <script src="{{ asset("/js/drag.js") }}" type="text/javascript"></script>
                 <script>
-                    // Dropdown init
-                    $('.dropdown-toggle').dropdown();
 
                     // Emplacement init
                     cVerticalPadding = 10;
@@ -281,6 +294,8 @@
 </div>
 
 <script type="text/javascript">
+    // Dropdown init
+    $('.dropdown-toggle').dropdown();
 
     {# Script pour l edition de document #}
     var fNewDoc = false;
