Modification des lien en https pour deployjava.js et googleFont

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/signPdfDoc.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/signPdfDoc.html.twig
@@ -134,7 +134,7 @@
     <div class="row"><small>URL Aplet : {{ url_applet }}</small></div>
 </div>
 
-<script type="text/javascript" src="http://www.java.com/js/deployJava.js"></script>
+<script type="text/javascript" src="https://www.java.com/js/deployJava.js"></script>
 <script type="text/javascript">
 
     // Permet l'affichage a retardement du helper
