--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/signDocJws.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/signDocJws.html.twig
@@ -139,7 +139,7 @@
 
 </div>
 
-<script type="text/javascript" src="http://www.java.com/js/deployJava.js"></script>
+<script type="text/javascript" src="https://www.java.com/js/deployJava.js"></script>
 <script type="text/javascript">
 
     // Délai de relance de la fonction ajax
