--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>{% block title %}SESILE - Système Electronique de SIgnature LEgale{% endblock %}</title>
-    <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ asset('css/dropzone.css') }}"/>
     <link rel="stylesheet" href="{{ asset('/bootstrap/css/bootstrap.css') }}"/>
     <link rel="stylesheet" href="{{ asset('/css/style.css') }}"/>
