--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1010,9 +1010,11 @@ select [name=user] {
 
 /* Sign document */
 .etape_progress .label {
-	padding: 4px 0 4px 5px;
+	/*padding: 4px 0 4px 5px;*/
+	padding: 8px 16px;
 	font-size: 100%;
 	margin-right: 10px;
+	border-radius: 50px;
 }
 
 .etape_progress .status_classeur {
