--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/signDocJws.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/signDocJws.html.twig
@@ -156,7 +156,7 @@
 
 </div>
 
-<script type="text/javascript" src="https://www.java.com/js/deployJava.js"></script>
+{#<script type="text/javascript" src="https://www.java.com/js/deployJava.js"></script>#}
 <script type="text/javascript">
 
     // Délai de relance de la fonction ajax
