Problème de champs sur l'emailing

--- a/src/Sesile/MainBundle/Resources/views/Admin/indexMailing.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Admin/indexMailing.html.twig
@@ -43,7 +43,7 @@
             menubar: "false"
         });
 
-        $("#form_mailMessage").prop('required', false);
+        /*$("#form_mailMessage").prop('required', false);*/
         //var textarea = $(".textarea").data("wysihtml5").el;
 
         $("input").keyup(function() {
